--- a/week01/01-Introduction.ipynb
+++ b/week01/01-Introduction.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "\n",
     "<center>\n",
-    "<img src=\"figs/Thomas_PR.jpg\" style=\"height: 300px\" /><img src=\"figs/olli.jpg\" style=\"height: 300px\" />\n",
+    "<img src=\"figs/Thomas_PR.jpg\" style=\"height: 300px\" />&nbsp;&nbsp;&nbsp;<img src=\"figs/olli.jpg\" style=\"height: 300px\" />\n",
     "</center>\n",
     "\n",
     "|               |                           |\n",
