--- a/week01/03-Goals_of_the_course.ipynb
+++ b/week01/03-Goals_of_the_course.ipynb
@@ -97,13 +97,41 @@
     " * KI, neuronal networks\n",
     " * web design, web apps, ...\n",
     " * link to other programming languages\n",
-    " * ..."
+    " * ...\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a251dbd1-82cf-42ea-9978-1461882f0534",
+   "metadata": {},
+   "source": [
+    "## Course Materials "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90428cde-41ce-4847-9d42-7ef38319af07",
+   "metadata": {},
+   "source": [
+    "All materials can be downloaded from a public git-Repository\n",
+    "\n",
+    "https://github.com/ocordes/Scientific_programming_with_Python_Summer_2023\n",
+    "\n",
+    "The materials include the lecture notebooks, the exercises and projects. \n",
+    "\n",
+    "For simple use you can follow the download instructions on this page:\n",
+    "\n",
+    "https://github.com/ocordes/Scientific_programming_with_Python_Summer_2023/tree/main/retrieve_materials\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d82a81b1-f793-4dd3-995f-b4d827ed252d",
+   "id": "c3612489-848c-4851-8043-2a09ffcc8190",
    "metadata": {},
    "outputs": [],
    "source": []
